Fix scrolling effect for carousel, increase header text size, adjust gradientTitle text size on mobile, fix overflow issue with themecontroller

--- a/src/styles/staticindex.css
+++ b/src/styles/staticindex.css
@@ -4263,19 +4263,19 @@ html {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.menu-sm :where(li:not(.menu-title) > *:not(ul, details, .menu-title)), .menu-sm :where(li:not(.menu-title) > details > summary:not(.menu-title)) {
+.menu-md :where(li:not(.menu-title) > *:not(ul, details, .menu-title)), .menu-md :where(li:not(.menu-title) > details > summary:not(.menu-title)) {
   border-radius: var(--rounded-btn, 0.5rem);
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 
-.menu-sm .menu-title {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.menu-md .menu-title {
+  padding-left: 1rem;
+  padding-right: 1rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
@@ -4332,14 +4332,6 @@ html {
   grid-column: span 7 / span 7;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
-.col-span-10 {
-  grid-column: span 10 / span 10;
-}
-
 .m-1 {
   margin: 0.25rem;
 }
@@ -4370,6 +4362,10 @@ html {
   margin-bottom: 18rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
@@ -4380,10 +4376,6 @@ html {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
 }
 
 .inline-block {
@@ -4440,6 +4432,10 @@ html {
 
 .max-h-72 {
   max-height: 18rem;
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .min-h-screen {
@@ -4509,10 +4505,6 @@ html {
 
 .grid-cols-8 {
   grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -4773,10 +4765,6 @@ html {
   padding-bottom: 2rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
-}
-
 .pt-12 {
   padding-top: 3rem;
 }
@@ -4787,10 +4775,6 @@ html {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
 }
 
 .text-center {
@@ -4849,6 +4833,11 @@ html {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -5057,5 +5046,35 @@ html {
 
   .lg\:text-end {
     text-align: end;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1.25;
+  }
+
+  .lg\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1.35;
+  }
+
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1.35;
+  }
+
+  .lg\:text-8xl {
+    font-size: 6rem;
+    line-height: 1.35;
+  }
+
+  .lg\:text-9xl {
+    font-size: 8rem;
+    line-height: 1.35;
   }
 }
